# fuse-encfs

./: .gitmodules  CMakeLists.txt  README.md
cli/: CMakeLists.txt  check.c  create.c  helper.c  helper.h  mount.c
cmake/: FindFUSE3.cmake  GResources.cmake  install.cmake
config/: config.json
crypto/: CMakeLists.txt  kgc.c  parameter.c  parameter.h  sm3.c  sm4.c  sm4.h  sm4_xts.c  sm9.c  sm9.h  sm9_helper.c  sm9_helper.h  zzn12.c
crypto/zzn12/: CMakeLists.txt  zzn12.cpp  zzn12_wrapper.cpp
gtk/: CMakeLists.txt  encfs-application.c  encfs-application.h  encfs-create-grid.c  encfs-create-grid.h  encfs-monitor-grid.c  encfs-monitor-grid.h  encfs-mount-grid.c  encfs-mount-grid.h  encfs-tpm-window.c  encfs-tpm-window.h  encfs-window.c  encfs-window.h  main.c  utility.c  utility.h
gtk/data/: swhc.encfs.mode_menu.gschema.xml
gtk/ui/: create-grid.ui  encfs-window.ui  encfs.gresource.xml  generate-rsa.ui  menu.ui  monitor-grid.ui  mount-grid.ui  ownership-dialog.ui  tpm-window.ui
include/: check-context.h  config.h  context.h  create-context.h  encfs.h  encfs_helper.h  mount-context.h  sm9.h  tpm-context.h
lib/: CMakeLists.txt  check-context.c  context.c  create-context.c  encfs-cb.c  encfs_helper.c  mount-context.c  tpm-context.c
lib/crypto/: CMakeLists.txt  kgc.c  parameter.c  parameter.h  sm3.c  sm3.h  sm4.c  sm4_xts.c  sm9.c  sm9_helper.c  sm9_helper.h  zzn12.c  zzn12.h
lib/crypto/zzn12/: CMakeLists.txt  zzn12.h  zzn12_wrapper.cpp  zzn12_wrapper.h
lib/tpm/: encrypt.c  tpm-init.c
script/: 0_usb.rules  encfs-env.service  encfs-mount.sh  encfs-unmount.sh  encfs@.service
src/: CMakeLists.txt  context.c  create.c  encfs.c  main.c  mount.c  test.c
